# bist-robogo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 622228031e14_initial_schema.py  a1b2c3d4e5f6_add_ohlcv_tables.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py
backend/app/api/: __init__.py  health.py  router.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  backtest.py  brokers.py  dashboard.py  market.py  notifications.py  orders.py  portfolio.py  risk.py  strategies.py  trends.py
backend/app/brokers/: base.py  factory.py  paper_broker.py
backend/app/core/: __init__.py  collectapi_client.py  openrouter_client.py  rate_limiter.py  redis_client.py  security.py  websocket_manager.py
backend/app/indicators/: momentum.py  trend.py
backend/app/models/: __init__.py  ai.py  audit.py  backtest.py  base.py  broker.py  market.py  notification.py  order.py  portfolio.py  risk.py  strategy.py  user.py
backend/app/repositories/: __init__.py  ai_repository.py  backtest_repository.py  base.py  broker_repository.py  market_repository.py  notification_repository.py  order_repository.py  portfolio_repository.py  risk_repository.py  strategy_repository.py  user_repository.py
backend/app/schemas/: __init__.py  ai.py  analysis.py  auth.py  backtest.py  broker.py  common.py  market.py  notification.py  order.py  portfolio.py  risk.py  strategy.py
backend/app/services/: ai_experiment_service.py  ai_service.py  auth_service.py  backtest_service.py  broker_service.py  market_data_service.py  notification_service.py  portfolio_service.py  risk_service.py  strategy_service.py  trading_service.py  trend_analysis_service.py
backend/app/strategies/: __init__.py  ai_strategy.py  base.py  ma_crossover.py  rsi_reversal.py
backend/app/tasks/: ai_tasks.py  backtest_tasks.py  celery_app.py  maintenance_tasks.py  market_tasks.py  notification_tasks.py
backend/app/utils/: constants.py  formatters.py
backend/app/websocket/: market_stream.py
backend/scripts/: seed_symbols.py
backend/tests/: conftest.py  test_ai.py  test_ai_experiments.py  test_ai_strategy.py  test_auth.py  test_backtest.py  test_brokers.py  test_dashboard.py  test_health.py  test_market.py  test_notifications.py  test_risk.py  test_strategies.py  test_trading.py  test_trends.py
docs/: 01-ARGE-GEREKSINIM-ANALIZI.md  02-SISTEM-MIMARISI.md  03-VERI-MODELLERI-VE-API.md  04-FRONTEND-TASARIM-VE-UX.md  05-GELISTIRME-PLANI-VE-MVP.md  06-EKSIK-ANALIZ-RAPORU.md  07-BACKEND-IMPLEMENTASYON-KILAVUZU.md  08-FRONTEND-IMPLEMENTASYON-KILAVUZU.md  09-TASARIM-SISTEMI.md  10-ADIM-ADIM-GELISTIRME-REHBERI.md  11-AI-AGENT-GELISTIRME-PROMPTU.md  12-PROJE-DURUMU.md
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/e2e/: auth.spec.ts
frontend/public/: manifest.json
frontend/src/: middleware.ts
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/stores/: auth-store.test.ts  market-store.test.ts  ui-store.test.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/src/app/(auth)/: error.tsx
frontend/src/app/(dashboard)/: error.tsx  layout.tsx
frontend/src/components/ai/: accuracy-badge.tsx  experiment-card.tsx  experiment-form.tsx  experiment-results.tsx  model-comparison-card.tsx  performance-chart.tsx
frontend/src/components/auth/: auth-guard.tsx
frontend/src/hooks/: use-ai.ts  use-backtest.ts  use-brokers.ts  use-dashboard.ts  use-market-data.ts  use-notifications.ts  use-portfolio.ts  use-risk.ts  use-strategies.ts  use-trading.ts  use-trends.ts  use-websocket.ts
frontend/src/stores/: auth-store.ts  market-store.ts  ui-store.ts
frontend/src/types/: ai.ts  auth.ts  backtest.ts  broker.ts  dashboard.ts  market.ts  notification.ts  order.ts  portfolio.ts  risk.ts  strategy.ts
scripts/: init-db.sql
(+49 files in other folders)
